Hide-button fix for #35 A button at the top of the Sections table, which toggles display of the column of delete buttons.  Only visible to MCs.

--- a/public_html/css/private/section_compiler/index.css
+++ b/public_html/css/private/section_compiler/index.css
@@ -10,3 +10,7 @@
 .section_number_header{
 	background : none !important;
 }
+
+.delete_column{
+	display:none;
+}
